# productivity-planner

./: .env.example  .gitignore  CLAUDE.md  FIXES_V3.md  README.md  docker-compose.yml  documentation.md
.streamlit/: config.toml  secrets.toml.example
agent/: agent.py
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/agent/: agent.py  tools.py
backend/db/: crud.py  schema.py
backend/integrations/: google_calendar.py
backend/routers/: admin.py  ai.py  analytics.py  calendar.py  goals.py  habits.py  preferences.py  projects.py  tasks.py
backend/utils/: date_utils.py  scheduling.py  seed.py  tz.py
frontend/: Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ScheduleCalendar.tsx  TabExplainer.tsx
frontend/src/lib/: api.ts  calendarSetup.tsx  colors.ts  datetime.ts  scheduling.ts  theme.ts
frontend/src/pages/: AIAssistant.tsx  Analytics.tsx  Calendar.tsx  Dashboard.tsx  Goals.tsx  Habits.tsx  Projects.tsx  Settings.tsx  Tasks.tsx  Welcome.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts  react-big-calendar-dnd.d.ts
legacy/: app.py  requirements.txt  test_db.py
legacy/agent/: tools.py
legacy/assets/: style.css
legacy/db/: crud.py  schema.py
legacy/integrations/: google_calendar.py
legacy/pages/: ai_chat.py  dashboard.py  goals.py  habits.py  settings.py  tasks.py
legacy/utils/: date_utils.py  toast.py
pages/: calendar.py
(+5 files in other folders)
