[project]
name = "productivity-planner-backend"
version = "2.0.0"
description = "Productivity Planner API — FastAPI + SQLite + Claude AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "anthropic>=0.42.0",
    "arrow>=1.3.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
]
